--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="brand header-brand">
                         <h1 class="m-0">
                             <a href="#">
-								<img class="header-logo-image asset-light" src="dist/images/logo-light.svg" alt="Logo">
+								<img class="header-logo-image asset-light" src="dist/images/ssapluslogo.png" alt="Logo" width="100" height="32">
 								<img class="header-logo-image asset-dark" src="dist/images/logo-dark.svg" alt="Logo">
                             </a>
                         </h1>
@@ -35,10 +35,10 @@
 	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
 	                        <div class="hero-cta">
 								<a class="button button-primary" href="#">Buy it now</a>
-								<div class="lights-toggle">
+								<!-- <div class="lights-toggle">
 									<input id="lights-toggle" type="checkbox" name="lights-toggle" class="switch" checked="checked">
 									<label for="lights-toggle" class="text-xs"><span>Turn me <span class="label-text">dark</span></span></label>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<div class="hero-media">
@@ -51,7 +51,7 @@
 								<img class="hero-media-illustration-image asset-dark" src="dist/images/hero-media-illustration-dark.svg" alt="Hero media illustration">
 							</div>
 							<div class="hero-media-container">
-								<img class="hero-media-image asset-light" src="dist/images/hero-media-light.svg" alt="Hero media">
+								<img class="hero-media-image asset-light" src="dist/images/ssaplusimage1.png" alt="Hero media" width="538" height="380">
 								<img class="hero-media-image asset-dark" src="dist/images/hero-media-dark.svg" alt="Hero media">
 							</div>
 						</div>
@@ -71,7 +71,7 @@
 									<img class="features-box asset-dark" src="dist/images/features-box-dark.svg" alt="Feature box">
 									<img class="features-illustration asset-dark" src="dist/images/features-illustration-top-dark.svg" alt="Feature illustration top">
 									<img class="features-illustration asset-light" src="dist/images/features-illustration-light.svg" alt="Feature illustration">
-									<img class="features-box asset-light" src="dist/images/features-box-light.svg" alt="Feature box">
+									<img class="features-box asset-light" src="dist/images/ssaplusimage2.png" alt="Feature box" width="540" height="370">
 									<img class="features-illustration asset-light" src="dist/images/features-illustration-top-light.svg" alt="Feature illustration top">
 								</div>
 							</div>
@@ -138,7 +138,7 @@
                 <div class="site-footer-inner">
                     <div class="brand footer-brand">
                         <a href="#">
-							<img class="asset-light" src="dist/images/logo-light.svg" alt="Logo">
+							<img class="asset-light" src="dist/images/ssapluslogo.png" alt="Logo" width="100" height="32">
 							<img class="asset-dark" src="dist/images/logo-dark.svg" alt="Logo">
                         </a>
                     </div>
@@ -182,7 +182,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">&copy; 2018 Switch, all rights reserved</div>
+                    <div class="footer-copyright">&copy; 2021 SSAPlus, all rights reserved</div>
                 </div>
             </div>
         </footer>
