--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <div class="feature is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-										<img class="asset-light" src="dist/images/feature-01-light.svg" alt="Feature 01">
+										<img class="asset-light" src="dist/images/cashier01.png" alt="Feature 01" width="48" height="48">
 										<img class="asset-dark" src="dist/images/feature-01-dark.svg" alt="Feature 01">
                                     </div>
 									<div class="feature-content">
@@ -92,7 +92,7 @@
 							<div class="feature is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-										<img class="asset-light" src="dist/images/feature-02-light.svg" alt="Feature 02">
+										<img class="asset-light" src="dist/images/inventory01.png" alt="Feature 02" width="48" height="48">
 										<img class="asset-dark" src="dist/images/feature-02-dark.svg" alt="Feature 02">
                                     </div>
 									<div class="feature-content">
@@ -104,7 +104,7 @@
 							<div class="feature is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-										<img class="asset-light" src="dist/images/feature-03-light.svg" alt="Feature 03">
+										<img class="asset-light" src="dist/images/report01.png" alt="Feature 03" width="48" height="48">
 										<img class="asset-dark" src="dist/images/feature-03-dark.svg" alt="Feature 03">
                                     </div>
 									<div class="feature-content">
