--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SSAPlus IT Solution</title>
+    <title>SSAPlus POS Solution</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|IBM+Plex+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
@@ -17,7 +17,7 @@
                     <div class="brand header-brand">
                         <h1 class="m-0">
                             <a href="#">
-								<img class="header-logo-image asset-light" src="dist/images/ssapluslogo.png" alt="Logo" width="100" height="32">
+								<img class="header-logo-image asset-light" src="dist/images/ssapluslogo.png" alt="Logo" width="120" >
 								<img class="header-logo-image asset-dark" src="dist/images/logo-dark.svg" alt="Logo">
                             </a>
                         </h1>
@@ -31,11 +31,11 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Landing template for startups</h1>
-	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
+	                        <h2 class="hero-title mt-0">บริหารร้านค้าปลีก ให้ง่าย คล่องตัว รวดเร็ว แม่นยำ</h2>
+	                        <p class="hero-paragraph">ระบบบริหารร้านค้าปลีกที่ใช้งานง่ายที่สุดตอบโจทย์ธุรกิจที่หลากหลายรองรับทุกระบบ Android ,iOS และ Windows ใช้งานได้ทุกที่ผ่านอินเตอร์เน็ตพร้อมระบบรายงานอัจฉริยะแบบ Real-time สามารถวิเคราะห์วางแผนการตลาดได้ </p>
 	                        <div class="hero-cta">
-								<a class="button button-primary" href="#">Buy it now</a>
-								<!-- <div class="lights-toggle">
+								<!-- <a class="button button-primary" href="#">Buy it now</a>
+								<div class="lights-toggle">
 									<input id="lights-toggle" type="checkbox" name="lights-toggle" class="switch" checked="checked">
 									<label for="lights-toggle" class="text-xs"><span>Turn me <span class="label-text">dark</span></span></label>
 								</div> -->
@@ -64,8 +64,8 @@
 					<div class="features-inner section-inner has-bottom-divider">
 						<div class="features-header text-center">
 							<div class="container-sm">
-								<h2 class="section-title mt-0">The Product</h2>
-	                            <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+								<h2 class="section-title mt-0">POS Solution</h2>
+	                            <!-- <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p> -->
 								<div class="features-image">
 									<img class="features-illustration asset-dark" src="dist/images/features-illustration-dark.svg" alt="Feature illustration">
 									<img class="features-box asset-dark" src="dist/images/features-box-dark.svg" alt="Feature box">
@@ -84,8 +84,8 @@
 										<img class="asset-dark" src="dist/images/feature-01-dark.svg" alt="Feature 01">
                                     </div>
 									<div class="feature-content">
-                                    	<h3 class="feature-title mt-0">Discover</h3>
-                                    	<p class="text-sm mb-0">Lorem ipsum dolor sit amet, consecte adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua dui.</p>
+                                    	<h3 class="feature-title mt-0">ขายหน้าร้าน</h3>
+                                    	<p class="text-sm mb-0">ระบบขายหน้าร้านเพิ่มความรวดเร็วบริหารข้อมูลการขายให้คล่องตัวมีข้อมูลประกอบการตัดสินใจที่ถูกต้อง</p>
 									</div>
 								</div>
                             </div>
@@ -96,8 +96,8 @@
 										<img class="asset-dark" src="dist/images/feature-02-dark.svg" alt="Feature 02">
                                     </div>
 									<div class="feature-content">
-                                    	<h3 class="feature-title mt-0">Discover</h3>
-                                    	<p class="text-sm mb-0">Lorem ipsum dolor sit amet, consecte adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua dui.</p>
+                                    	<h3 class="feature-title mt-0">คลังสินค้า</h3>
+                                    	<p class="text-sm mb-0">ระบบบริหารจัดการคลังสินค้าเพิ่มความแม่นยำในการตรวจนับสินค้าจัดการให้เป็นหมวดหมู่ตามต้องการ</p>
 									</div>
 								</div>
                             </div>
@@ -108,8 +108,8 @@
 										<img class="asset-dark" src="dist/images/feature-03-dark.svg" alt="Feature 03">
                                     </div>
 									<div class="feature-content">
-                                    	<h3 class="feature-title mt-0">Discover</h3>
-                                    	<p class="text-sm mb-0">Lorem ipsum dolor sit amet, consecte adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua dui.</p>
+                                    	<h3 class="feature-title mt-0">รายงาน</h3>
+                                    	<p class="text-sm mb-0">ระบบสามารถออกรายงานในรูปแบบกราฟและตัวเลขเพื่อง่ายต่อการเรียกดูนำข้อมูลมาวิเคราะห์อย่างหลากหลาย</p>
 									</div>
 								</div>
                             </div>
@@ -122,10 +122,16 @@
                 <div class="container-sm">
                     <div class="cta-inner section-inner">
                         <div class="cta-header text-center">
-                            <h2 class="section-title mt-0">Get it and Switch</h2>
-                            <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                            <h2 class="section-title mt-0">ติดต่อฝ่ายขาย</h2>
+                            <p class="section-paragraph">คุณมด โทร 095-421-7773</p>
 							<div class="cta-cta">
-								<a class="button button-primary" href="#">Buy it now</a>
+								<div class="features-image">
+
+									<img class="features-illustration asset-light" src="dist/images/features-illustration-light.svg" alt="Feature illustration">
+									<img class="features-box asset-light" src="dist/images/QRCode.jpg" alt="Feature box" width="200" height="200">
+
+								</div>
+								<!-- <a class="button button-primary" href="#">Buy it now</a> -->
 							</div>
 					    </div>
                     </div>
